2009-01-07  Atsushi Enomoto  <atsushi@ximian.com>

	* CompareInfo.cs : Fixed bug #462957. With empty target string it
	  should always return 0.

2008-08-14  Atsushi Enomoto  <atsushi@ximian.com>

	* CultureInfo.cs : applied patch by Robert Jordan,
	  fixed bug #402128. Create uninitialized parent culture
	  when required.

2008-07-28  Marek Safar <marek.safar@gmail.com>

	* GregorianCalendar.cs: Delay DateTime .cctor invocation.

2008-07-03  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* TextInfo.cs: Fix exceptions
	* StringInfo.cs
	* SortKey.cs:
	* RegionInfo.cs:
	* NumberFormatInfo.cs:
	* CultureInfo.cs:
	* CompareInfo.cs:
	* CharUnicodeInfo.cs: Fix parameter names

2008-07-03  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* UmAlQuraCalendar.cs:
	* ThaiBuddhistCalendar.cs
	* TaiwanCalendar.cs:
	* PersianCalendar.cs:
	* KoreanCalendar.cs:
	* JulianCalendar.cs:
	* JapaneseCalendar.cs:
	* HijriCalendar.cs:
	* HebrewCalendar.cs:
	* GregorianCalendar.cs:
	* EastAsianLunisolarCalendar.cs:
	* Calendar.cs: Fix parameter names

2008-06-28  Zoltan Varga  <vargaz@gmail.com>

	* CompareInfo.cs: Add a cache of SimpleCollator objects.

2008-01-13  Eyal Alaluf <eyala@mainsoft.com>

	* NumberFormatInfo.cs: Defined internal "Raw" APIs that do not clone the
	  internal array members in order to improve performance of custom ToString.

2008-01-06  Zoltan Varga  <vargaz@gmail.com>

	* CultureInfo.cs: Add a 'cached_serialized_form' field.
	
	* CultureInfo.cs NumberFormatInfo.cs DateTimeFormatInfo.cs TextInfo.cs: Make
	sure the components of a read-only culture object are read-only as well.

2007-12-28  Gert Driesen  <drieseng@users.sourceforge.net>

	* CultureInfo.cs: Added internal CreateCulture method, which is used
	by the runtime to creating CultureInfo instances for AssemblyName.

2007-11-21  Atsushi Enomoto  <atsushi@ximian.com>

	* NumberFormatInfo.cs :
	  NativeDigits and DigitSubstitution are [ComVisible(false)].

2007-09-10  Atsushi Enomoto  <atsushi@ximian.com>
